--- a/page8.htm
+++ b/page8.htm
@@ -5,7 +5,7 @@
 
 <p>As I became more busy with my life, I ended up calling less and less.</p>
 
-<img src="Phonez.jpg" alt="Phonez"> 
+<img src="phonez.jpg" alt="Phonez">
 
 
 <a href="page7.htm">Back</a>
